Fix UnsupportedOperationException on exception print